// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Cell Cell 1`] = `
<button
  aria-label={1}
  className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        
        
        
        "
  data-test={1}
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  />
</button>
`;

exports[`Storyshots Cell Empty 1`] = `
<button
  aria-label={1}
  className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        
        
        
        "
  data-test={1}
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  />
</button>
`;

exports[`Storyshots Cell Filled 1`] = `
<button
  aria-label={1}
  className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        
        
        
        "
  data-test={1}
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    1
  </span>
</button>
`;

exports[`Storyshots Cell Inner Corner 1`] = `
<button
  aria-label={1}
  className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        boxBoundaryBottom
        
        
        
        
        "
  data-test={1}
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  />
</button>
`;

exports[`Storyshots Cell Outer Corner 1`] = `
<button
  aria-label={1}
  className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        boxBoundaryLeft
        boxBoundaryTop
        
        
        "
  data-test={1}
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  />
</button>
`;

exports[`Storyshots Cell Selected 1`] = `
<button
  aria-label={1}
  className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        
        selected
        
        "
  data-test={1}
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  />
</button>
`;

exports[`Storyshots Grid Grid 1`] = `
<div
  className="MuiGrid-root grid"
  data-test="grid"
>
  <div
    className="grid-row"
    data-test="row-0"
  >
    <button
      aria-label="cell-0/0"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        boxBoundaryLeft
        boxBoundaryTop
        
        cursor
        "
      data-test="cell-0/0"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-0/1"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        boxBoundaryTop
        
        
        "
      data-test="cell-0/1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-0/2"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        
        
        boxBoundaryTop
        
        
        "
      data-test="cell-0/2"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-0/3"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        boxBoundaryLeft
        boxBoundaryTop
        
        
        "
      data-test="cell-0/3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-0/4"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        boxBoundaryTop
        
        
        "
      data-test="cell-0/4"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-0/5"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        
        
        boxBoundaryTop
        
        
        "
      data-test="cell-0/5"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-0/6"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        boxBoundaryLeft
        boxBoundaryTop
        
        
        "
      data-test="cell-0/6"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-0/7"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        boxBoundaryTop
        
        
        "
      data-test="cell-0/7"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-0/8"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        
        
        boxBoundaryTop
        
        
        "
      data-test="cell-0/8"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
  </div>
  <div
    className="grid-row"
    data-test="row-1"
  >
    <button
      aria-label="cell-1/0"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        boxBoundaryLeft
        
        
        
        "
      data-test="cell-1/0"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-1/1"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        
        
        
        "
      data-test="cell-1/1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-1/2"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        
        
        
        
        
        "
      data-test="cell-1/2"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-1/3"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        boxBoundaryLeft
        
        
        
        "
      data-test="cell-1/3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-1/4"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        
        
        
        "
      data-test="cell-1/4"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-1/5"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        
        
        
        
        
        "
      data-test="cell-1/5"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-1/6"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        boxBoundaryLeft
        
        
        
        "
      data-test="cell-1/6"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-1/7"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        
        
        
        "
      data-test="cell-1/7"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-1/8"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        
        
        
        
        
        "
      data-test="cell-1/8"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
  </div>
  <div
    className="grid-row"
    data-test="row-2"
  >
    <button
      aria-label="cell-2/0"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        boxBoundaryBottom
        boxBoundaryLeft
        
        
        
        "
      data-test="cell-2/0"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-2/1"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        boxBoundaryBottom
        
        
        
        
        "
      data-test="cell-2/1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-2/2"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        boxBoundaryBottom
        
        
        
        
        "
      data-test="cell-2/2"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-2/3"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        boxBoundaryBottom
        boxBoundaryLeft
        
        
        
        "
      data-test="cell-2/3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-2/4"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        boxBoundaryBottom
        
        
        
        
        "
      data-test="cell-2/4"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-2/5"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        boxBoundaryBottom
        
        
        
        
        "
      data-test="cell-2/5"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-2/6"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        boxBoundaryBottom
        boxBoundaryLeft
        
        
        
        "
      data-test="cell-2/6"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-2/7"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        boxBoundaryBottom
        
        
        
        
        "
      data-test="cell-2/7"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-2/8"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        boxBoundaryBottom
        
        
        
        
        "
      data-test="cell-2/8"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
  </div>
  <div
    className="grid-row"
    data-test="row-3"
  >
    <button
      aria-label="cell-3/0"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        boxBoundaryLeft
        boxBoundaryTop
        
        
        "
      data-test="cell-3/0"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-3/1"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        boxBoundaryTop
        
        
        "
      data-test="cell-3/1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-3/2"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        
        
        boxBoundaryTop
        
        
        "
      data-test="cell-3/2"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-3/3"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        boxBoundaryLeft
        boxBoundaryTop
        
        
        "
      data-test="cell-3/3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-3/4"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        boxBoundaryTop
        
        
        "
      data-test="cell-3/4"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-3/5"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        
        
        boxBoundaryTop
        
        
        "
      data-test="cell-3/5"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-3/6"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        boxBoundaryLeft
        boxBoundaryTop
        
        
        "
      data-test="cell-3/6"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-3/7"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        boxBoundaryTop
        
        
        "
      data-test="cell-3/7"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-3/8"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        
        
        boxBoundaryTop
        
        
        "
      data-test="cell-3/8"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
  </div>
  <div
    className="grid-row"
    data-test="row-4"
  >
    <button
      aria-label="cell-4/0"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        boxBoundaryLeft
        
        
        
        "
      data-test="cell-4/0"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-4/1"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        
        
        
        "
      data-test="cell-4/1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-4/2"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        
        
        
        
        
        "
      data-test="cell-4/2"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-4/3"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        boxBoundaryLeft
        
        
        
        "
      data-test="cell-4/3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-4/4"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        
        
        
        "
      data-test="cell-4/4"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-4/5"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        
        
        
        
        
        "
      data-test="cell-4/5"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-4/6"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        boxBoundaryLeft
        
        
        
        "
      data-test="cell-4/6"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-4/7"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        
        
        
        "
      data-test="cell-4/7"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-4/8"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        
        
        
        
        
        "
      data-test="cell-4/8"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
  </div>
  <div
    className="grid-row"
    data-test="row-5"
  >
    <button
      aria-label="cell-5/0"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        boxBoundaryBottom
        boxBoundaryLeft
        
        
        
        "
      data-test="cell-5/0"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-5/1"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        boxBoundaryBottom
        
        
        
        
        "
      data-test="cell-5/1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-5/2"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        boxBoundaryBottom
        
        
        
        
        "
      data-test="cell-5/2"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-5/3"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        boxBoundaryBottom
        boxBoundaryLeft
        
        
        
        "
      data-test="cell-5/3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-5/4"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        boxBoundaryBottom
        
        
        
        
        "
      data-test="cell-5/4"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-5/5"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        boxBoundaryBottom
        
        
        
        
        "
      data-test="cell-5/5"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-5/6"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        boxBoundaryBottom
        boxBoundaryLeft
        
        
        
        "
      data-test="cell-5/6"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-5/7"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        boxBoundaryBottom
        
        
        
        
        "
      data-test="cell-5/7"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-5/8"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        boxBoundaryBottom
        
        
        
        
        "
      data-test="cell-5/8"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
  </div>
  <div
    className="grid-row"
    data-test="row-6"
  >
    <button
      aria-label="cell-6/0"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        boxBoundaryLeft
        boxBoundaryTop
        
        
        "
      data-test="cell-6/0"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-6/1"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        boxBoundaryTop
        
        
        "
      data-test="cell-6/1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-6/2"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        
        
        boxBoundaryTop
        
        
        "
      data-test="cell-6/2"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-6/3"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        boxBoundaryLeft
        boxBoundaryTop
        
        
        "
      data-test="cell-6/3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-6/4"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        boxBoundaryTop
        
        
        "
      data-test="cell-6/4"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-6/5"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        
        
        boxBoundaryTop
        
        
        "
      data-test="cell-6/5"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-6/6"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        boxBoundaryLeft
        boxBoundaryTop
        
        
        "
      data-test="cell-6/6"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-6/7"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        boxBoundaryTop
        
        
        "
      data-test="cell-6/7"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-6/8"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        
        
        boxBoundaryTop
        
        
        "
      data-test="cell-6/8"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
  </div>
  <div
    className="grid-row"
    data-test="row-7"
  >
    <button
      aria-label="cell-7/0"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        boxBoundaryLeft
        
        
        
        "
      data-test="cell-7/0"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-7/1"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        
        
        
        "
      data-test="cell-7/1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-7/2"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        
        
        
        
        
        "
      data-test="cell-7/2"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-7/3"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        boxBoundaryLeft
        
        
        
        "
      data-test="cell-7/3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-7/4"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        
        
        
        "
      data-test="cell-7/4"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-7/5"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        
        
        
        
        
        "
      data-test="cell-7/5"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-7/6"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        boxBoundaryLeft
        
        
        
        "
      data-test="cell-7/6"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-7/7"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        
        
        
        
        
        "
      data-test="cell-7/7"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-7/8"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        
        
        
        
        
        "
      data-test="cell-7/8"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
  </div>
  <div
    className="grid-row"
    data-test="row-8"
  >
    <button
      aria-label="cell-8/0"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        boxBoundaryBottom
        boxBoundaryLeft
        
        
        
        "
      data-test="cell-8/0"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-8/1"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        boxBoundaryBottom
        
        
        
        
        "
      data-test="cell-8/1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-8/2"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        boxBoundaryBottom
        
        
        
        
        "
      data-test="cell-8/2"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-8/3"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        boxBoundaryBottom
        boxBoundaryLeft
        
        
        
        "
      data-test="cell-8/3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-8/4"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        boxBoundaryBottom
        
        
        
        
        "
      data-test="cell-8/4"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-8/5"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        boxBoundaryBottom
        
        
        
        
        "
      data-test="cell-8/5"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-8/6"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        boxBoundaryBottom
        boxBoundaryLeft
        
        
        
        "
      data-test="cell-8/6"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-8/7"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        
        boxBoundaryBottom
        
        
        
        
        "
      data-test="cell-8/7"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
    <button
      aria-label="cell-8/8"
      className="MuiButtonBase-root MuiButton-root MuiButton-outlined sudokuCell
        boxBoundaryRight
        boxBoundaryBottom
        
        
        
        
        "
      data-test="cell-8/8"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      />
    </button>
  </div>
</div>
`;
